--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="links-container">
       <strong class="description">Getting in touch! 👋</strong>
-      <p class="description">I have over 30 years of experience in developing successful growth models with direct inside/outside sales and indirect partner sales in a variety of different industries of service, technology companies, transportation companies and related products. My team and I have worked hard to improve current transportation logistics and related technology to be more efficient, productive and profitable. I have a strong understanding of how to enhance team business culture, existing customer relationships, developing new key customer relationships and overcoming difficult past customer product and service issues by rebuilding company name and industry reputation. I'm fluent in English and Spanish, with a proficiency in Portuguese.</p>
+      <p class="description">I have over 30 years of experience in developing successful growth models with direct inside/outside sales and indirect partner sales in a variety of different industries of service, technology companies, transportation companies and related products.industry reputation.</p>
 
       <a class="link" href="mailto: anthony@aguerrero.com" target="_blank">
         <img class="logo" src="./assets/mail.svg" alt="Linkedin Logo">
